<resources>
    <string name="app_name">Ratefix</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="favourites">Favourites</string>
    <string name="upcoming">Upcoming</string>
    <string name="top_rated">Top Rated</string>
    <string name="recently_released">Recently Released</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="register">Register</string>
    <string name="login">login</string>
    <string name="logged_in_key">logged_in</string>
    <string name="username_key">username</string>
    <string name="enter_username">Enter Username</string>
    <string name="login01">login</string>
    <string name="not_registered">Not Registered</string>
    <string name="signin">SignIN</string>
    <string name="signin_with_google">Signin With Google</string>
    <string name="signin_with_linkedin">Signin with linkedin</string>
    <string name="signin_with_phone_number">Signin with phone number</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="e_mail_id">E-mail ID</string>
    <string name="back_to_login">Back To LogIn</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="item_1">Item 1</string>
    <string name="rate_fix">Rate_Fix</string>
    <string name="rate_sign">Rate_Sign</string>
    <string name="item_3">Item 3</string>
    <string name="item_4">Item 4</string>
    <string name="item_2">Item 2</string>
    <string name="item_3564">Item 3</string>
    <string name="todo">TODO</string>
    <string name="item_4433">Item 4</string>
    <string name="item_5867">Item 5</string>
    <string name="todo0">TODO</string>
    <string name="item_42434">Item 4</string>
    <string name="item_1354354">Item 1</string>
    <string name="item_23454">Item 2</string>
    <string name="item_445">Item 4</string>
    <string name="item_534">Item 5</string>
    <string name="item_123">Item 1</string>
    <string name="item_2345">Item 2</string>
    <string name="item_3243">Item 3</string>
    <string name="item_424">Item 4</string>
    <string name="item_4786">Item 4</string>
    <string name="item_577">Item 5</string>
    <string name="item_12345">Item 1</string>
    <string name="director_franklin_j_schaffner">Director :- Franklin J Schaffner</string>
    <string name="movie_planet_of_the_ape_s">Movie:- Planet Of The Ape\'s</string>
    <string name="item_27878">Item 2</string>
    <string name="movie_the_beekeper">Movie:- The Beekeper</string>
    <string name="director_david_ayeer">Director:- David Ayeer</string>
    <string name="item_3787">Item 3</string>
    <string name="item_4334">Item 4</string>
    <string name="item_567678">Item 5</string>
    <string name="item_689">Item 6</string>
    <string name="description_in_the_matrix_a_groundbreaking_science_fiction_film_viewers_are_thrust_into_a_dystopian_world_where_reality_is_a_simulated_construct_created_by_sentient_machines_to_subdue_humanity_the_story_follows_neo_a_computer_programmer_turned_reluctant_hero_as_he_discovers_the_truth_about_the_matrix_and_joins_a_group_of_rebels_fighting_to_free_humanity_from_its_digital_imprisonment_through_visually_stunning_action_sequences_and_thought_provoking_philosophical_themes_the_matrix_challenges_perceptions_of_reality_identity_and_the_nature_of_existence_with_its_innovative_storytelling_and_iconic_visual_effects">Description:-In \'The Matrix,\' a groundbreaking science fiction film, viewers are thrust into a dystopian world where reality is a simulated construct created by sentient machines to subdue humanity. The story follows Neo, a computer programmer turned reluctant hero, as he discovers the truth about the Matrix and joins a group of rebels fighting to free humanity from its digital imprisonment. Through visually stunning action sequences and thought-provoking philosophical themes, \'The Matrix\' challenges perceptions of reality, identity, and the nature of existence. With its innovative storytelling and iconic visual effects.</string>
    <string name="movie_the_beekeeper">Movie :- The Beekeeper</string>
    <string name="director_theo_angelopoulos">Director :- Theo Angelopoulos</string>
    <string name="movie_kraven">Movie :- Kraven</string>
    <string name="j_c_chandler">J.C Chandler</string>
</resources>